# metalworks

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE_POLICY.md  docs.json  llms.txt  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/pr-ready/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: ai-agents.md  architecture.md  build-sources.md  build-spec.md  build-your-own.md  building-blocks.md  claude-code.md  cli.md  competitors.md  concepts.md  configuration.md  content-seo.md  corpus.md  custom-chatmodel.md  custom-corpus.md  custom-store.md  data-model.md  demand-research.md  deploy-billing.md  design-review.md  design-system.md  design.md  distribution-geo.md  distribution.md  explanation-open-core.md  explanation-provenance.md  extending.md  for-coding-agents.md  guide-build.md  guide-demand-research.md  guide-design.md  guide-launch-growth.md  guide-positioning-landscape.md  guide-reddit-engagement.md  how-it-works.md  how-to-custom-chatmodel.md  how-to-custom-corpus.md  how-to-custom-store.md  how-to-supabase-store.md  index.md  (+24 more)
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/docs/: operating-metalworks.md
plugin/hooks/: hooks.json
plugin/skills/billing/: SKILL.md
plugin/skills/build-spec/: SKILL.md
plugin/skills/competitor-map/: SKILL.md
plugin/skills/content-plan/: SKILL.md
plugin/skills/demand-report/: SKILL.md
plugin/skills/deploy-site/: SKILL.md
plugin/skills/design/: SKILL.md
plugin/skills/design-review/: SKILL.md
plugin/skills/discovery/: SKILL.md
plugin/skills/distribution-assets/: SKILL.md
plugin/skills/distribution-data-report/: SKILL.md
plugin/skills/distribution-engage/: SKILL.md
plugin/skills/distribution-geo/: SKILL.md
plugin/skills/distribution-measure/: SKILL.md
plugin/skills/distribution-plan/: SKILL.md
plugin/skills/distribution-requirements/: SKILL.md
plugin/skills/distribution-strategy/: SKILL.md
plugin/skills/draft-reply/: SKILL.md
plugin/skills/find-threads/: SKILL.md
plugin/skills/generate-site/: SKILL.md
plugin/skills/go-no-go/: SKILL.md
plugin/skills/ideate/: SKILL.md
plugin/skills/launch-kit/: SKILL.md
plugin/skills/logo/: SKILL.md
plugin/skills/market-landscape/: SKILL.md
plugin/skills/position-wedge/: SKILL.md
plugin/skills/subreddit-intel/: SKILL.md
plugin/skills/surface-and-ux/: SKILL.md
plugin/skills/validate/: SKILL.md
scripts/: README.md  gen_sources_md.py  gen_ts_types.py  load_arctic_corpus.py  load_hn_corpus.py
src/metalworks/: __init__.py  _genai_client.py  _update_check.py  client.py  config.py  errors.py  preflight.py  project.py  runs.py
src/metalworks/billing/: __init__.py  fake.py  protocol.py  subscription.py  webhook.py
src/metalworks/billing/adapters/: __init__.py  stripe.py
src/metalworks/cli/: __init__.py
src/metalworks/cli/_demo/: __init__.py  scripted.py
src/metalworks/contract/: __init__.py  assess.py  billing.py  build.py  bundle.py  corpus.py  deploy.py  design.py  distribution.py  evidence.py  ideate.py  landscape.py  launch.py  logo.py  marketing.py  positioning.py  preflight.py  reddit.py  research.py  shape.py  site.py  surface.py  validate.py
src/metalworks/contract/schema/: demand_report.schema.json  discovery_context.schema.json  opportunity.schema.json  research_brief.schema.json
src/metalworks/deploy/: __init__.py  fake.py  protocol.py
src/metalworks/deploy/adapters/: __init__.py  vercel.py
src/metalworks/discovery/: __init__.py  deps.py  judge.py  prompts.py  service.py
src/metalworks/embeddings/: __init__.py
src/metalworks/embeddings/adapters/: __init__.py  fastembed.py  google.py  openai.py
src/metalworks/llm/: __init__.py  fake.py  fallback.py  protocol.py  structured.py
src/metalworks/llm/adapters/: __init__.py  _claude_code_runtime.py  _retry.py  _timeout.py  anthropic.py  claude_code.py  google.py  openai.py
src/metalworks/mcp/: __init__.py  jobs.py  server.py  tools.py
src/metalworks/reddit/: __init__.py  audit.py  compliance.py  fetcher.py  inbox.py  oauth.py  ratelimit.py  search.py  stylebook.py  subreddit.py
src/metalworks/render/: __init__.py  fake.py
src/metalworks/render/adapters/: __init__.py  firecrawl.py  playwright.py
src/metalworks/research/: __init__.py  assess.py  checkpoints.py  deps.py  design.py  design_review.py  diff.py  embedding_cache.py  grounding.py  ideate.py  landscape.py  launch.py  logo.py  marketing.py  pipeline.py  refresh.py  site.py  surface.py  types.py  validate.py  web.py
src/metalworks/research/arctic/: __init__.py  api.py  api_reader.py  hydration.py  mirror_reader.py  reader.py
src/metalworks/research/discovery/: __init__.py  exa.py  parallel.py
src/metalworks/research/distribution/: __init__.py  assets.py  channels.py  data_asset.py  (+5 more)
src/metalworks/search/: __init__.py
src/metalworks/shapes/: __init__.py  catalog.py  matcher.py
src/metalworks/stores/: __init__.py  corpus_mapping.py  crypto.py  filestore.py  memory.py  repos.py  sqlite.py  supabase.py  vectors.py
src/metalworks/testing/: __init__.py
tests/: sample_corpus.py  test_adapters.py  test_arctic_api_reader.py  test_arctic_mirror_reader.py  test_billing_deploy_adapters.py  test_billing_deploy_fakes.py  test_billing_subscription.py  test_billing_webhook.py  test_build.py  test_claude_code_adapter.py  test_claude_code_search.py  test_cli.py  test_cli_deploy_billing.py  test_cli_interactive.py  test_client.py  test_config_resolution.py  test_conformance_sweep.py  test_contract.py  test_contract_forks.py  test_corpus_record.py  test_corpus_store.py  test_crypto.py  test_design.py  test_design_review.py  test_discovery_exa.py  test_discovery_parallel.py  test_discovery_prompts.py  test_discovery_service.py  test_distribution.py  test_embedding_cache.py  test_embeddings.py  test_embeddings_resolution.py  test_embeddings_store.py  test_evidence.py  test_filestore.py  test_firstrun_021.py  test_gen_sources_md.py  test_imports.py  test_itemsource.py  test_llm_fallback.py  (+69 more)
ts/: contract.ts
(+61 files in other folders)
